isd/oes/templates/ingress/oes-gate-ingress.yaml
---
# Source: oes/templates/ingress/oes-gate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: oes-gate-ingress
spec:
  rules:
  - host: oes-gate.yug.play.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: oes-gate
            port:
              number: 8084
        path: /
        pathType: ImplementationSpecific
